# ip-15-m-saevskii-anatolii

./: CMakeLists.txt
complex_number/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumberTests.cpp  main.cpp
dictionary_word_freq/: main.cpp  out  text
matrixarr/: main.cpp  matrixarr.h
matrixnec/: main.cpp  matrixnec.h
nvector/: CMakeLists.txt  main.cpp  nvector.h
queenarr/: main.cpp  queenarr.h
queenlst/: main.cpp  queenlst.h
rational_number/: CMakeLists.txt  main.cpp
stackarray/: stackarray.cpp
stacklst/: CMakeLists.txt  main.cpp  stack_list.h
vector3/: CMakeLists.txt  main.cpp
znvector/: CMakeLists.txt  main.cpp  znvector.h
